kubernetes/cks/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: secretpod
  name: secretpod
  namespace: seminar
spec:
  containers:
  - image: nginx
    name: secretpod
    resources: {}
    volumeMounts:
    - name: secret-volume
      readOnly: true
      mountPath: /var/lib
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
  - name: secret-volume
    secret:
      secretName: secret1

status: {}
